feat: complete guessing game

--- a/guessing_game/Makefile
+++ b/guessing_game/Makefile
@@ -1,13 +1,16 @@
+# add crates to the project
+add: 
+	cargo add $(package)
 #  build your project
-build: cargo
+build: 
 		cargo build
 
 # cargo check is much faster than cargo build, because it skips the step of producing an executable.
-check: cargo
+check: 
 		cargo check
 
 # to compile the code and then run the resulting executable all in one command
-run:	cargo 
+run:
 		cargo run
 
 # the executable with this command
